# ACMGO

./: CLAUDE.md  README.md
acmgo_agent/: .env.example  README.md  pyproject.toml
acmgo_agent/agent/core/: agent.py  workflow.py
acmgo_agent/agent/prompts/: examples.py
acmgo_agent/agent/providers/: __init__.py  factory.py  litellm.py  openai.py
acmgo_agent/agent/tools/: __init__.py  compiler.py  file_ops.py  polygon_packer.py  stress_test.py  test_generator.py
acmgo_agent/cli/: main.py
acmgo_agent/config/: settings.py
acmgo_agent/templates/: cleanup.py
acmgo_agent/tests/: __init__.py  conftest.py
acmgo_agent/tests/fixtures/: simple_brute.cpp  simple_gen.cpp  simple_val.cpp  testlib.h
acmgo_agent/tests/test_core/: __init__.py  test_agent.py
acmgo_agent/tests/test_tools/: __init__.py  test_compiler.py  test_file_ops.py  test_generator.py  test_polygon_packer.py  test_stress_test.py
